--- a/context/runtime/config/filebeat/main.yml
+++ b/context/runtime/config/filebeat/main.yml
@@ -8,9 +8,15 @@ processors:
   - add_docker_metadata: ~
 
 output.elasticsearch:
-  hosts: '${ELASTICSEARCH_HOSTS:elasticsearch:9200}'
+  hosts: '${ELASTICSEARCH_HOSTS:https://elastic.local:4443}'
   username: '${ELASTICSEARCH_USERNAME:}'
   password: '${ELASTICSEARCH_PASSWORD:}'
+
+setup:
+  kibana:
+    host: "${KIBANA_HOST:kibana.local:443}"
+    username: "${KIBANA_USERNAME:}"
+    password: "${KIBANA_PASSWORD:}"
 
 filebeat.autodiscover:
   providers:
